--- a/project_root/requirements.txt
+++ b/project_root/requirements.txt
@@ -6,3 +6,7 @@ torchvision --index-url https://download.pytorch.org/whl/cpu
 torchaudio --index-url https://download.pytorch.org/whl/cpu
 datasets
 indic-nlp-library
+fastapi
+uvicorn[standard]
+pydantic
+scikit-learn
